--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5,5 +5,6 @@
     <string name="dummy_button">Dummy Button</string>
     <string name="dummy_content">DUMMY\nCONTENT</string>
     <string name="wait_for_bus">WAIT FOR BUS</string>
+    <string name="splash">Splash screen image</string>
 
 </resources>
