--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -2,9 +2,27 @@
 <resources>
 
     <string name="app_name">LiveMTD</string>
-    <string name="dummy_button">Dummy Button</string>
-    <string name="dummy_content">DUMMY\nCONTENT</string>
-    <string name="wait_for_bus">WAIT FOR BUS</string>
-    <string name="splash">Splash screen image</string>
+    <string name="contactme">Contact me!</string>
+    <string name="legal">Legal Notices</string>
+    <string name="search_hint">5th and White</string>
+    <string name="search_description">Search all bus stops in Urbana-Champaign!</string>
+    <string name="mit">The MIT License (MIT) 
+Copyright © 2014 Permission is hereby granted, free of charge, to any person obtaining a copy
+of this software and associated documentation files (the "Software"), to deal
+in the Software without restriction, including without limitation the rights
+to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
+copies of the Software, and to permit persons to whom the Software is
+furnished to do so, subject to the following conditions:
+
+The above copyright notice and this permission notice shall be included in
+all copies or substantial portions of the Software.
+
+THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
+IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
+FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
+AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
+LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
+OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
+THE SOFTWARE. MIT 2014</string>
 
 </resources>
