--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -2,7 +2,7 @@
 <resources>
 
     <string name="app_name">LiveMTD</string>
-    <string name="contactme">Contact me!</string>
+    <string name="contactme">Contact</string>
     <string name="legal">Legal Notices</string>
     <string name="search_hint">5th and White</string>
     <string name="search_description">Search all bus stops in Urbana-Champaign!</string>
@@ -24,5 +24,10 @@ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
 LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
 OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
 THE SOFTWARE. MIT 2014</string>
+    <string name="splashcontentdescription">Splash view image of generic black bus</string>
+    <string name="title_activity_stop_info">Bus ETAs</string>
+    <string name="hello_world">Hello world!</string>
+    <string name="action_settings">Settings</string>
+    <string name="mapthumbnail">Map thumbnail showing the location of MTD stop</string>
 
 </resources>
