--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="app_name">LiveMTD</string>
     <string name="contactme">Contact</string>
     <string name="legal">Legal Notices</string>
-    <string name="search_hint">5th and White</string>
+    <string name="search_hint">Fifth and White</string>
     <string name="search_description">Search all bus stops in Urbana-Champaign!</string>
     <string name="mit">The MIT License (MIT) 
 Copyright © 2014 Permission is hereby granted, free of charge, to any person obtaining a copy
